Fix popup display on firefox

--- a/source/content-script/pageview/content.css
+++ b/source/content-script/pageview/content.css
@@ -36,7 +36,7 @@ html.pageview > body {
     position: absolute;
     top: 0;
     right: 0;
-    width: 300px;
+    width: 350px;
     height: 50px;
 }
 
